tests/yield/yield.exp
Error ---------------------------------------------------------------------------------------- yield_arrow_error.js:2:25

Unexpected number, expected the end of an expression statement (`;`)

   2|   var e = () => { yield 1; };
                              ^


Error --------------------------------------------------------------------------------------- yield_arrow_error2.js:2:23

Unexpected number, expected the token `;`

   2|   var e = () => yield 1;
                            ^



Found 2 errors
